[gd_scene load_steps=7 format=3 uid="uid://citl8wi4m7rnq"]

[ext_resource type="Script" path="res://scenes/test_tim.gd" id="1_wper4"]
[ext_resource type="Script" path="res://scenes/class_test.gd" id="2_6wsfi"]
[ext_resource type="Script" path="res://scenes/astar_test.gd" id="2_gpvrd"]
[ext_resource type="Texture2D" uid="uid://bclxufr4qgaob" path="res://art/icon.svg" id="3_fmw6e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_trpp3"]
radius = 30.0167

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l4gk"]
size = Vector2(126, 128)

[node name="test_tim" type="Node"]
script = ExtResource("1_wper4")

[node name="astar_test" type="CharacterBody2D" parent="."]
script = ExtResource("2_gpvrd")

[node name="Sprite2D" type="Sprite2D" parent="astar_test"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_fmw6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="astar_test"]
shape = SubResource("CircleShape2D_trpp3")

[node name="class_test" type="Node" parent="."]
script = ExtResource("2_6wsfi")

[node name="test_wall" type="StaticBody2D" parent="."]
position = Vector2(490, 291)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="test_wall"]
position = Vector2(1, 3.8147e-05)
scale = Vector2(0.984375, 1)
texture = ExtResource("3_fmw6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_wall"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_5l4gk")

[node name="Marker2D" type="Marker2D" parent="test_wall"]
position = Vector2(64, 64)

[node name="Marker2D2" type="Marker2D" parent="test_wall"]
position = Vector2(-64, -64)

[node name="test_wall2" type="StaticBody2D" parent="."]
position = Vector2(489, 368)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="test_wall2"]
position = Vector2(1, 3.8147e-05)
scale = Vector2(0.984375, 1)
texture = ExtResource("3_fmw6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_wall2"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_5l4gk")

[node name="Marker2D" type="Marker2D" parent="test_wall2"]
position = Vector2(64, 64)

[node name="Marker2D2" type="Marker2D" parent="test_wall2"]
position = Vector2(-64, -64)

[node name="test_wall3" type="StaticBody2D" parent="."]
position = Vector2(491, 447)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="test_wall3"]
position = Vector2(1, 3.8147e-05)
scale = Vector2(0.984375, 1)
texture = ExtResource("3_fmw6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_wall3"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_5l4gk")

[node name="Marker2D" type="Marker2D" parent="test_wall3"]
position = Vector2(64, 64)

[node name="Marker2D2" type="Marker2D" parent="test_wall3"]
position = Vector2(-64, -64)

[node name="test_wall4" type="StaticBody2D" parent="."]
position = Vector2(492, 524)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="test_wall4"]
position = Vector2(1, 3.8147e-05)
scale = Vector2(0.984375, 1)
texture = ExtResource("3_fmw6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_wall4"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_5l4gk")

[node name="Marker2D" type="Marker2D" parent="test_wall4"]
position = Vector2(64, 64)

[node name="Marker2D2" type="Marker2D" parent="test_wall4"]
position = Vector2(-64, -64)
